src/components/ui/Notification/Notification.scss
@import './src/assets/styles/imports';

.ui-notification {
  position: relative;
  right: -300px;
  min-width: 220px;
  border-radius: 3px;
  padding: 7px 15px 7px 15px;
  margin-bottom: 10px;
  z-index: 9999;
  display: flex;
  align-items: center;
  width: auto;
  transition: right .7s cubic-bezier(0.85, 0.05, 0.18, 1.25);

  &.success {
    background-color: $success-bg;
    border: 1px solid $success-border;
    &__icon {
      & svg {
        fill: $success-color;
      }
    }
  }

  &.delete {
    background-color: $error-bg;
    border: 1px solid $error-bg;
    &__icon {
      & svg {
        fill: $error-color;
      }
    }
  }

  &.error {
    background-color: $error-bg;
    border: 1px solid $error-bg;
    &__icon {
      & svg {
        fill: $error-color;
      }
    }
  }

  &__icon {
    display: flex;
    align-items: center;
  }

  &__message {
    font-size: 12px;
    margin-left: 10px;
    max-width: 180px;
  }
}

.notification-animation {
  &-enter {
    &-active {
      right: -300px;
    }
    &-done {
      right: 10px;
    }
  }
}

